use consistent apis